Add Overture and ProviderInterface, PSR4 autoload Overture namespace

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
   ],
   "require": {
     "php": "^5.5 || ^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Overture\\": "src/"
+    }
   }
 }
