--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
   "require": {
     "php": "^5.5 || ^7.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^4.8"
+  },
   "autoload": {
     "psr-4": {
       "Overture\\": "src/"
