--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,10 @@
   "scripts" : {
     "lint": [
       "find -L src -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l"
+    ],
+    "tests": [
+      "@lint",
+      "vendor/bin/phpunit"
     ]
   }
 }
