Change a package name to overture/overture

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "vhraban/overture",
+  "name": "overture/overture",
   "type": "library",
   "description": "Universal configuration tool",
   "homepage": "https://github.com/vhraban/Overture",
