--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   },
   "scripts" : {
     "lint": [
-      "find -L src -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l"
+      "find -L src tests -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l"
     ],
     "tests": [
       "@lint",
